@@ -71,6 +71,14 @@ template <> struct wrap_type_traits<long double> { typedef wrap_type_primitive_t
 template <> struct wrap_type_traits<short> { typedef wrap_type_primitive_tag wrap_category; } ;
 template <> struct wrap_type_traits<unsigned short> { typedef wrap_type_primitive_tag wrap_category; } ;
 
+#ifdef LONG_LONG_MAX
+template <> struct wrap_type_traits<long long int> { typedef wrap_type_primitive_tag wrap_category; } ;
+#endif
+
+#ifdef ULONG_LONG_MAX
+template <> struct wrap_type_traits<unsigned long long int> { typedef wrap_type_primitive_tag wrap_category; } ;
+#endif 
+
 } // namespace traits
 } // namespace Rcpp
 #endif
